fix methode O(n)