@@ -1,6 +1,5 @@
-package school.faang;
+package school.faang.groupusers;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -13,12 +12,12 @@ public class Main {
         User user4 = new User("Olga", 30, "CompanyD", "Street 4");
         User user5 = new User("John", 22, "CompanyE", "Street 5");
 
-        List<User> users = Arrays.asList(user1, user2, user3, user4, user5);
+        List<User> users = List.of(user1, user2, user3, user4, user5);
 
         Map<Integer, List<String>> grouped = User.groupUsers(users);
 
         for (Map.Entry<Integer, List<String>> entry : grouped.entrySet()) {
-            System.out.println("Возраст: " + entry.getKey() + " " + entry.getValue());
+            System.out.printf("Возраст: %d %s%n", entry.getKey(),  entry.getValue());
         }
     }
 }
